--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,8 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.squareup.okhttp3:okhttp:3.5.0'
+    implementation 'com.alibaba:fastjson:1.2.67'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
